# simpleFeed

./: README.md  main.py  pyproject.toml  run.txt
app/: app.py  images.py  schemas.py
backend/: .gitignore  test.db
backend/app/: app.py  db.py  images.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AuthPage.jsx  Feed.jsx  Navbar.jsx  PostCard.jsx  UploadModal.jsx
