[project]
name = "simplefeed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.7.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
]
